--- a/node/package.json
+++ b/node/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
-    "yargs": "^8.0.2"
+    "yargs": "^8.0.2",
+    "ftpsync": "^0.2.0"
   }
 }
