--- a/image_resize/package.json
+++ b/image_resize/package.json
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.2",
     "yargs": "^8.0.2",
     "gm": "^1.23.0",
-    "child_process": "^1.0.2"
+    "child_process": "^1.0.2",
+    "yargs": "^8.0.2"
   }
 }
