--- a/node/package.json
+++ b/node/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "yargs": "^8.0.2",
-    "ftpsync": "^0.2.0"
+    "ftpsync": "^0.2.0",
+    "gm": "^1.23.0",
+    "child_process": "^1.0.2"
   }
 }
