--- a/node/package.json
+++ b/node/package.json
@@ -14,6 +14,7 @@
     "yargs": "^8.0.2",
     "ftpsync": "^0.2.0",
     "gm": "^1.23.0",
-    "child_process": "^1.0.2"
+    "child_process": "^1.0.2",
+    "marked": "^0.3.6"
   }
 }
