--- a/node/package.json
+++ b/node/package.json
@@ -15,6 +15,7 @@
     "ftpsync": "^0.2.0",
     "gm": "^1.23.0",
     "child_process": "^1.0.2",
-    "showdown": "^1.7.5"
+    "showdown": "^1.7.5",
+    "request": "^2.83.0"
   }
 }
