--- a/node/package.json
+++ b/node/package.json
@@ -11,11 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
-    "yargs": "^8.0.2",
-    "ftpsync": "^0.2.0",
-    "gm": "^1.23.0",
     "child_process": "^1.0.2",
+    "ftpsync": "^0.2.0",
+    "gm": "^1.23.1",
+    "request": "^2.83.0",
     "showdown": "^1.7.5",
-    "request": "^2.83.0"
+    "yargs": "^8.0.2"
   }
 }
