--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ python/__pycache__/settings.cpython-36.pyc
 python/session_name.session
 python/settings.py
 python/TeleChannels.txt
+source/other/comics_ghost.html
+source/other/comics_meduse.html
